[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/DescriptionPanel/DescriptionPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/LeftRightSelectionPanel/LeftRightSelectionPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameHUDRelated/PauseScreenPanel/GameSettingsPanel/GameSettingsPanel.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Theme" id=7]
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource( 2 )
VScrollBar/styles/grabber_highlight = SubResource( 3 )
VScrollBar/styles/grabber_pressed = SubResource( 4 )
VScrollBar/styles/scroll = SubResource( 5 )
VScrollBar/styles/scroll_focus = SubResource( 6 )

[node name="GameSettingsPanel" type="MarginContainer"]
margin_right = 200.0
margin_bottom = 361.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 350.0
margin_bottom = 361.0
custom_constants/separation = 40

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_left = 131.0
margin_right = 219.0
margin_bottom = 21.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="ContentMargin" type="MarginContainer" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 350.0
margin_bottom = 361.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ContentMargin"]
margin_right = 350.0
margin_bottom = 300.0
rect_min_size = Vector2( 350, 300 )
theme = SubResource( 7 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ContentMargin/ScrollContainer"]
margin_right = 350.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ContentMargin/ScrollContainer/VBoxContainer"]
margin_right = 350.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="DescModeDescriptionPanel" parent="VBoxContainer/ContentMargin/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 142.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DescModeSelectionPanel" parent="VBoxContainer/ContentMargin/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 150.0
margin_right = 350.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 10
[connection signal="on_current_index_changed" from="VBoxContainer/ContentMargin/ScrollContainer/VBoxContainer/HBoxContainer/DescModeSelectionPanel" to="." method="_on_DescModeSelectionPanel_on_current_index_changed"]
